# AutomateSimulation

./: .gitignore  CMakeLists.txt  README.md
src/: Automata.cpp  Components.cpp  Main.cpp  State.cpp  Statetype.cpp  TextInputComponent.cpp  Transition.cpp
src/headers/: Automata.hpp  Clay_imp.hpp  Components.hpp  Simulation.hpp  State.hpp  StateType.hpp  TextInputComponent.hpp  Transition.hpp
